--- a/plugins/export/dune
+++ b/plugins/export/dune
@@ -1,6 +1,6 @@
 (executable
   (name plugin_export)
-  (libraries gwexport gwulib gwb2gedlib geneweb-lib gwdpluginlib geneweb-wserver)
+  (libraries gwexport gwulib gwb2gedlib geneweb-lib geneweb-gwd-lib geneweb-wserver)
   (embed_in_plugin_libraries gwexport gwulib gwb2gedlib)
   (flags (:standard -w -40-27))
   (modes (native plugin))
