--- a/lib/gwdb_driver.mli/dune
+++ b/lib/gwdb_driver.mli/dune
@@ -1,7 +1,7 @@
 (library
  (name gwdb_driver_mli)
- (public_name geneweb-lib.gwdb_driver.mli)
+ (public_name geneweb.gwdb_driver)
  (wrapped false)
- (libraries geneweb-lib.def)
+ (libraries geneweb.def)
  (virtual_modules gwdb_driver)
 )
