--- a/lib/gwdb-legacy/dune
+++ b/lib/gwdb-legacy/dune
@@ -1,10 +1,10 @@
 (library
   (name gwdb_legacy)
-  (public_name geneweb-gwdb-legacy)
-  (implements geneweb-lib.gwdb_driver.mli)
+  (public_name geneweb.gwdb-legacy)
+  (implements geneweb.gwdb_driver)
   (libraries
-    geneweb-lib.def
-    geneweb-lib.util
+    geneweb.def
+    geneweb.util
     unix
   )
   (modules_without_implementation dbdisk)
