--- a/lib/gwxjg/dune
+++ b/lib/gwxjg/dune
@@ -2,9 +2,9 @@
 
 (library
   (name gwxjg)
-  (public_name geneweb-jingoo)
+  (public_name geneweb.gwxjg)
   (wrapped true)
-  (libraries unix geneweb-lib jingoo)
+  (libraries unix geneweb jingoo)
   (flags (:standard -w -42-40))
   (modules ezgw data trans lexicon_parser)
 )
