--- a/plugins/cgl/dune
+++ b/plugins/cgl/dune
@@ -1,5 +1,5 @@
 (executable
   (name plugin_cgl)
-  (libraries geneweb-lib geneweb-gwd-lib geneweb-wserver)
+  (libraries geneweb geneweb.gwd_lib geneweb.wserver)
   (modes (native plugin))
 )
