--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@
 
   environment:
     CYG_BASH: '%CYG_ROOT%/bin/bash -lc'
-    OPAM_PACKAGES: 'calendars camlp5.7.12 cppo dune.2.7.1 jingoo markup ocaml ounit stdlib-shims unidecode.0.2.0 uucp uutf uunf'
+    OPAM_PACKAGES: 'calendars camlp5.7.12 cppo dune.2.7.1 jingoo markup ocaml stdlib-shims unidecode.0.2.0 uucp uutf uunf'
     matrix:
       - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
         CYG_ROOT: C:/cygwin64
@@ -51,10 +51,6 @@
     - sh: 'eval $(opam config env)'
     - sh: 'opam update'
     - sh: 'opam install $OPAM_PACKAGES'
-
-  test_script:
-    - cmd: '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make test"'
-    - sh: 'ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make test'
 
   build_script:
     - sh : 'ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make clean distrib'
