Added depexts field to geneweb.opam [skip appveyor]

--- a/geneweb.opam
+++ b/geneweb.opam
@@ -42,3 +42,8 @@ depends: [
   "yojson"
   "zarith"
 ]
+
+depexts: [
+  ["protobuf-compiler"] {os-family = "debian"}
+  ["protobuf"] {os = "macos"}
+]
