--- a/bin/gwd/dune
+++ b/bin/gwd/dune
@@ -2,9 +2,10 @@
   (target gwdPluginMD5.ml)
   (deps
     (:cmxs
+      %{project_root}/plugins/cgl/plugin_cgl.cmxs
       %{project_root}/plugins/export/plugin_export.cmxs
       %{project_root}/plugins/forum/plugin_forum.cmxs
-      %{project_root}/plugins/cgl/plugin_cgl.cmxs
+      %{project_root}/plugins/no_index/plugin_no_index.cmxs
       %{project_root}/plugins/xhtml/plugin_xhtml.cmxs
     )
     (:maker mk_gwdPluginMD5.ml)
