Make life easier for plugin developpers

--- a/plugins/xhtml/dune
+++ b/plugins/xhtml/dune
@@ -3,3 +3,5 @@
   (libraries geneweb geneweb.gwd_lib geneweb.wserver)
   (modes (native plugin))
 )
+
+(alias (name plugin) (deps plugin_xhtml.cmxs))
