--- a/bin/gwd/dune.in
+++ b/bin/gwd/dune.in
@@ -1,16 +1,10 @@
 (rule
   (target gwdPluginMD5.ml)
   (deps
-    (:cmxs
-      %{project_root}/plugins/cgl/plugin_cgl.cmxs
-      %{project_root}/plugins/export/plugin_export.cmxs
-      %{project_root}/plugins/forum/plugin_forum.cmxs
-      %{project_root}/plugins/no_index/plugin_no_index.cmxs
-      %{project_root}/plugins/xhtml/plugin_xhtml.cmxs
-    )
+    (alias_rec %{project_root}/plugins/plugin)
     (:maker mk_gwdPluginMD5.ml)
   )
-  (action (with-stdout-to %{target} (run ocaml %{maker} %{cmxs})))
+  (action (with-stdout-to %{target} (run ocaml %{maker} %{project_root}/plugins)))
 )
 
 (library
