--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,9 +53,9 @@
     - sh: 'opam install $OPAM_PACKAGES'
 
   build_script:
-    - sh : 'ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make clean distrib'
+    - sh : 'ocaml ./configure.ml --sosa-legacy --gwdb-gwc1 --release && make clean distrib'
     - sh : 'zip -r geneweb-$PKG_OS-$PKG_VERSION.zip distribution/*'
-    - cmd: '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-legacy --gwdb-legacy --release && make clean distrib"'
+    - cmd: '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ocaml ./configure.ml --sosa-legacy --gwdb-gwc1 --release && make clean distrib"'
     - cmd: 'iscc geneweb.iss'
     - cmd: 7z a geneweb-%PKG_OS%-%PKG_VERSION%.zip %APPVEYOR_BUILD_FOLDER%\distribution
 
