--- a/lib/gwdb-gwc1-x-arangodb/dune.in
+++ b/lib/gwdb-gwc1-x-arangodb/dune.in
@@ -1,9 +1,9 @@
-(copy_files %{project_root}/lib/gwdb-legacy/{btree.ml,database.ml,database.mli,dbdisk.mli,dutil.ml,dutil.mli,gwdb_gc.ml,outbase.ml})
-(rule (copy %{project_root}/lib/gwdb-legacy/gwdb_driver.ml gwdb_driver_legacy.ml))
+(copy_files %{project_root}/lib/gwdb-gwc1/{btree.ml,database.ml,database.mli,dbdisk.mli,dutil.ml,dutil.mli,gwdb_gc.ml,outbase.ml})
+(rule (copy %{project_root}/lib/gwdb-gwc1/gwdb_driver.ml gwdb_driver_gwc1.ml))
 
 (library
-  (name gwdb_legacy_x_arangodb)
-  (public_name geneweb.gwdb-legacy-x-arangodb)
+  (name gwdb_gwc1_x_arangodb)
+  (public_name geneweb.gwdb-gwc1-x-arangodb)
   (implements geneweb.gwdb_driver.mli)
   (libraries
     curl
@@ -24,7 +24,7 @@
     gwdb_driver
     gwdb_driver_arango
     gwdb_driver_env
-    gwdb_driver_legacy
+    gwdb_driver_gwc1
     gwdb_gc
     http_curl
     json
