--- a/lib/gwdb-gwc1/dune
+++ b/lib/gwdb-gwc1/dune
@@ -1,6 +1,6 @@
 (library
-  (name gwdb_legacy)
-  (public_name geneweb.gwdb-legacy)
+  (name gwdb_gwc1)
+  (public_name geneweb.gwdb-gwc1)
   (implements geneweb.gwdb_driver)
   (libraries
     geneweb.def
