--- a/bin/wserver/dune
+++ b/bin/wserver/dune
@@ -3,5 +3,6 @@
  (public_name geneweb.wserver)
  (wrapped false)
  (libraries geneweb.util unix)
+ (preprocess (action (run %{bin:cppo} %{input-file})))
  (modules wserver)
 )
