Improved Mutil.get_particle perfs

--- a/lib/gwdb_driver.mli/dune
+++ b/lib/gwdb_driver.mli/dune
@@ -2,6 +2,6 @@
  (name gwdb_driver_mli)
  (public_name geneweb.gwdb_driver)
  (wrapped false)
- (libraries geneweb.def)
+ (libraries geneweb.def re)
  (virtual_modules gwdb_driver)
 )
