--- a/lib/def/dune.in
+++ b/lib/def/dune.in
@@ -1,6 +1,6 @@
 (library
  (name geneweb_def)
  (public_name geneweb.def)
- (modules adef def)
  (wrapped false)
+ (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
 )
