--- a/bin/wserver/dune.in
+++ b/bin/wserver/dune.in
@@ -3,6 +3,6 @@
  (public_name geneweb.wserver)
  (wrapped false)
  (libraries geneweb.util unix)
- (preprocess (action (run %{bin:cppo}  -D GENEWEB_GWDB_LEGACY -D WINDOWS -D DEBUG %{input-file})))
+ (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
  (modules wserver)
 )
