Made syslog optionnal (not enabled by default).

--- a/bin/gwd/dune.in
+++ b/bin/gwd/dune.in
@@ -11,7 +11,13 @@
   (name gwd_lib)
   (public_name geneweb.gwd_lib)
   (wrapped true)
-  (libraries geneweb syslog wserver %%%GWDB_PKG%%% %%%SOSA_PKG%%%)
+  (libraries
+    geneweb
+    wserver
+    %%%GWDB_PKG%%%
+    %%%SOSA_PKG%%%
+    %%%SYSLOG_PKG%%%
+  )
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
   (modules gwdLog gwdPlugin request sendImage)
 )
@@ -26,7 +32,6 @@
     gwd_lib
     gwxjg
     str
-    syslog
     unix
     wserver
     %%%GWDB_PKG%%%
