--- a/bin/ged2gwb/dune.in
+++ b/bin/ged2gwb/dune.in
@@ -2,5 +2,6 @@
   (name ged2gwb)
   (public_name geneweb.ged2gwb)
   (modules ged2gwb)
-  (libraries unix str camlp5.gramlib %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb)
+  (preprocess (action (run camlp5o pr_o.cmo pa_extend.cmo q_MLast.cmo %{input-file})))
+  (libraries unix str %%%GWDB_PKG%%% %%%SOSA_PKG%%% geneweb)
 )
