API: fixed compilation if not using --api

--- a/plugins/api/dune.in
+++ b/plugins/api/dune.in
@@ -1,3 +1,5 @@
+#ifdef API
+
 (rule
   (deps api.proto)
   (targets api_piqi.ml api_piqi_ext.ml)
@@ -83,3 +85,5 @@
 )
 
 (alias (name plugin) (deps (source_tree assets) plugin_api.cmxs))
+
+#endif
