Moved {DEL,SND}_IMAGE{,_OK} handlers into a new plugin

--- a/bin/gwd/dune.in
+++ b/bin/gwd/dune.in
@@ -19,7 +19,7 @@
     %%%SYSLOG_PKG%%%
   )
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
-  (modules gwdLog gwdPlugin request sendImage)
+  (modules gwdLog gwdPlugin request)
 )
 
 (executable
