--- a/lib/dune.in
+++ b/lib/dune.in
@@ -17,6 +17,7 @@
             stdlib-shims
             camlp5
             geneweb.def
+            geneweb.gwdb
             geneweb.gwdb_driver
             geneweb.io
             geneweb.sosa.mli
