--- a/plugins/gwxjg/dune
+++ b/plugins/gwxjg/dune
@@ -7,6 +7,7 @@
 
 (library
   (name plugin_gwxjg_lib)
+  (public_name geneweb.plugin_gwxjg_lib)
   (libraries unix geneweb jingoo)
   (flags (:standard -w -42-40))
   (modules gwxjg_ezgw gwxjg_data gwxjg_trans gwxjg_lexicon_parser)
