gwxjg: embed jingoo

--- a/plugins/gwxjg/dune
+++ b/plugins/gwxjg/dune
@@ -16,7 +16,7 @@
 (executable
   (name plugin_gwxjg)
   (libraries geneweb.gwd_lib plugin_gwxjg_lib)
-  (embed_in_plugin_libraries plugin_gwxjg_lib)
+  (embed_in_plugin_libraries jingoo plugin_gwxjg_lib)
   (flags -linkall)
   (modes (native plugin))
   (modules plugin_gwxjg)
