--- a/lib/sosa_num/dune
+++ b/lib/sosa_num/dune
@@ -1,6 +1,6 @@
 (library
- (name sosa_num)
- (public_name geneweb.sosa-num)
+ (name geneweb_sosa_num)
+ (public_name geneweb.sosa_num)
  (libraries num)
  (implements geneweb.sosa.mli)
 )
