Renaming internal libs

--- a/lib/sosa_zarith/dune
+++ b/lib/sosa_zarith/dune
@@ -2,5 +2,5 @@
  (name geneweb_sosa_zarith)
  (public_name geneweb.sosa_zarith)
  (libraries zarith)
- (implements geneweb.sosa.mli)
+ (implements geneweb_sosa_mli)
 )
