--- a/lib/sosa_num/dune
+++ b/lib/sosa_num/dune
@@ -2,5 +2,5 @@
  (name geneweb_sosa_num)
  (public_name geneweb.sosa_num)
  (libraries num)
- (implements geneweb.sosa.mli)
+ (implements geneweb_sosa_mli)
 )
