--- a/plugins/api/dune.in
+++ b/plugins/api/dune.in
@@ -53,6 +53,8 @@
   )
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
   (wrapped true)
+  (enabled_if (= "Unix" %{os_type}))
+  (optional)
 )
 
 (executable
@@ -68,6 +70,12 @@
   (flags (:standard -w -40-27))
   (modes (native plugin))
   (modules plugin_api)
+  (enabled_if (= "Unix" %{os_type}))
+  (optional)
 )
 
-(alias (name plugin) (deps (source_tree assets) plugin_api.cmxs))
+(alias
+  (name plugin)
+  (deps (source_tree assets) plugin_api.cmxs)
+  (enabled_if (= "Unix" %{os_type}))
+)
